[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonary.api"

[project.urls]
Homepage = "https://machshev.github.io/aramaic-bible-modules"
Documentation = "https://machshev.github.io/aramaic-bible-modules"
Changelog = "https://machshev.github.io/aramaic-bible-modules/changelog"
Repository = "https://github.com/machshev/aramaic-bible-modules"
Issues = "https://github.com/machshev/aramaic-bible-modules/issues"
Discussions = "https://github.com/machshev/aramaic-bible-modules/discussions"
Funding = "https://github.com/sponsors/machshev"

[project.scripts]
abm-tools = "abm_tools.cli:main"

[tool.poetry]
name = "abm-tools"
version = "1.2.0"
description = "aramaic bible module tools"
authors = ["David James McCorrie"]
license = "Apache-2.0"
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
jinja2 = "^3.1"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
black = ">=23.9"
blacken-docs = ">=1.16"
duty = ">=0.10"
git-changelog = ">=2.3"
markdown-callouts = ">=0.3"
markdown-exec = ">=1.7"
mkdocs = ">=1.5"
mkdocs-coverage = ">=1.0"
mkdocs-gen-files = ">=0.5"
mkdocs-git-committers-plugin-2 = ">=1.2"
mkdocs-literate-nav = ">=0.6"
mkdocs-material = ">=9.4"
mkdocs-minify-plugin = ">=0.7"
mkdocstrings = ">=0.23"
mypy = ">=1.5"
pandas-stubs = ">=2.2.1.240316"
pyhamcrest = ">=2.1.0"
pytest = ">=7.4"
pytest-cov = ">=4.1"
pytest-randomly = ">=3.15"
pytest-xdist = ">=3.3"
ruff = ">=0.0"
safety = ">=2.3"
types-markdown = ">=3.5"
types-pyyaml = ">=6.0"
types-requests = ">=2.31.0.20240406"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "fixtures",
    "site",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PYI",
    "Q",
    "RUF",
    "RSE",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN101",
    "TRY003",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["abm_tools"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.git-changelog]
bump = "auto"
convention = "angular"
in-place = true
output = "CHANGELOG.md"
parse-refs = false
parse-trailers = true
sections = ["build", "deps", "feat", "fix", "refactor"]
template = "keepachangelog"

